--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "admin-lte": "^3.0.0-alpha.2",
+    "admin-lte": "^3.0.5",
     "axios": "^0.21.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bootstrap-notify": "^3.1.3",
-    "bootstrap-sass": "^3.3.7",
-    "chart.js": "^2.7.2",
-    "cross-env": "^5.0.1",
+    "chart.js": "^2.9.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "laravel-mix": "^3.0",
     "vue": "^2.6.12",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.4.8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "bootstrap-sass": "^3.4.1",
+    "cross-env": "^5.2.1",
+    "js-yaml": ">=3.13.1",
+    "laravel-mix": "^5.0.7",
+    "mem": ">=4.0.0",
+    "object-path": ">=0.11.5",
+    "serialize-javascript": ">=3.1.0",
+    "webpack-dev-server": ">=3.1.11"
+  }
 }
